@@ -19,14 +19,16 @@ BEHAVIOR_CONQUERABLE=\
 Behavior   : Conquerable\n\r\
 Targets    : AREAs\n\r\
 Parameters : (JOURNAL="[JOURNAL NAME]") (LAW=(TRUE/FALSE))\n\r\
-Example    : \n\r\
-Example    : JOURNAL="The Conquest Times" LAW=FALSE\n\r\
+Parameters : (OWNERSHIP=(TRUE/FALSE))\n\r\
+Example    : JOURNAL="The Conquest Times" LAW=FALSE OWNERSHIP=FALSE\n\r\
 Description: \n\r\
 This behavior makes the area conquerable by clans using items put together \
 using ClanCraft.  See the general help on CONQUEST for more information on \
 what this means and how it works.  The JOURNAL entry, if given, will log \
 conquest events to a journal of that name.  The LAW entry is required in order \
-to allow an area to be set up by conquering clans with a system of law.
+to allow an area to be set up by conquering clans with a system of law. The \
+OWNERSHIP entry is true if All private property is automatically signed over \
+to the conquering clan, and false if it is left alone.
 
 BEHAVIOR_GOLDLOOTER=\
 Behavior   : GoldLooter\n\r\
